[package]
name = "csv_broker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
account = {path = "../account", features = ["serde"]}
transaction_broker = {path = "../transaction_broker"}
csv = "1.1.6"
csv-async = "1.2.4"
async-std = {version = "1.12.0", features = ["attributes", "unstable"]}
serde = "1.0.147"
